--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "node-red-within-restana",
   "version": "0.1.0",
   "description": "embedding Node-RED within a Restana instance",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +20,16 @@
   "bugs": {
     "url": "https://github.com/rozek/node-red-within-restana/issues"
   },
-  "homepage": "https://github.com/rozek/node-red-within-restana#readme"
+  "homepage": "https://github.com/rozek/node-red-within-restana#readme",
+  "dependencies": {
+    "commander": "^8.1.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "morgan": "^1.10.0",
+    "node-red": "^2.0.5",
+    "serve-static": "^1.14.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.7.6"
+  }
 }
